# alpha-core-framework

./: .gitattributes  Cargo.toml  README.md
.github/: FUNDING.yml
alpha-core-framework/: Cargo.toml
automation/: .gitignore  Cargo.toml
automation/src/: main.rs
src/: lib.rs  main.rs  middleware.rs  pipeline.rs
