[package]
name = "alpha-core-framework"
version = "0.1.0"
edition = "2021"
description = "High-performance modular Rust framework for async task orchestration and memory-efficient data pipelines"
license = "MIT"
repository = "https://github.com/cmwrxh/alpha-core-framework"
homepage = "https://brilliantunicorn.com"

[dependencies]
tokio = { version = "1", features = ["full"] }  # or minimal features if preferred

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }